--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Casa Estrela | Home</title>
     <link rel="stylesheet" href="/style.css">
+    <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 
@@ -65,7 +66,7 @@
             if (time >= "09:00:00" && time < "10:00:00") {
                 activity = "the cats are playing.";
                 document.body.style.setProperty('--circle-color', "#00ff00");
-            } else if (time >= "10:00:00" && time < "18:00:00" && weekdays.includes(day)) {
+            } else if (time >= "10:00:00" && time < "22:00:00" && weekdays.includes(day)) {
                 activity = "the cats are sleeping.";
                 document.body.style.setProperty('--circle-color', "#0000ff");
             }
