--- a/people.html
+++ b/people.html
@@ -3,38 +3,105 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Estrela | Home</title>
+    <title>Casa Estrela | People</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 
 <body>
-    <!-- Top bar with Casa Estrela and navigation links -->
-    <div class="top-bar">
-        <a href="/index.html" class="casaestrela" id="home-menu">Casa Estrela</a>
-        <nav>
-            <ul class="nav">
-                <li><a href="https://www.instagram.com/casaestrela__/" target="_blank">Instagram</a></li>
-                <li><a href="mailto:acasaestrela@gmail.com" target="_blank">Email</a></li>
-            </ul>
-        </nav> 
-    </div>
 
-    <!-- Horizontal line below top bar -->
-    <div class="horizontallinetop"></div>
+  <!-- Top bar with Casa Estrela and navigation links -->
+  <div class="top-bar">
+    <a href="/index.html" class="casaestrela" id="home-menu">Casa Estrela</a>
+    <nav>
+        <ul class="nav">
+            <li><a href="https://www.instagram.com/casaestrela__/" target="_blank">Instagram</a></li>
+            <li><a href="mailto:acasaestrela@gmail.com" target="_blank">Email</a></li>
+        </ul>
+    </nav> 
+</div>
 
-    <!-- Main content -->
-    <main class="main-text">
-        <p>
-            Casa Estrela: is a non-profit organization and self-organized space for artists, theoreticians, 
-            researchers, practitioners, and activists. This is an ongoing process of building a place for 
-            creation, study, connection, and exchange for everyone who wants to expand their own practice. 
-            The house is located in the village of Molelos, in Beira Alta, Portugal, next to Serra do Caramulo. 
-            We have been developing projects and receiving <a href="/people.html"><strong>people</strong></a> since 2023. To stay with us, there is no need 
-            to apply, nor is there any selection. We practice solidarity prices, as accessible as possible.
-        </p>
-    </main>
+<!-- Horizontal line below top bar -->
+<div class="horizontallinetop"></div>
+
+<!-- List of people that stayed at home -->
+<main class="guests">
+    <table>
+        <tr> 
+            <td>Inês Lima</td>  
+            <td>20/9 - 28/9</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Diogo Vale</td> 
+            <td>20/9 - 28/9</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Marcelo Tavares</td> 
+            <td>5/10 - 10/10</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Vicente Del Pedregal</td> 
+            <td>30/02 - 3/11</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Gerard Borras</td> 
+            <td>20/10 - 3/11</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Maria Inês Gonçalves</td> 
+            <td>20/10 - 3/11</td>
+            <td>2023</td>
+        </tr>
+        <tr> 
+            <td>Marcelo Tavares</td> 
+            <td>10/11 - 15/11</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Atelineiras</td> 
+            <td>24/02 - 28/02</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Inês Lima</td> 
+            <td>NA - NA</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Alba Lindblad</td> 
+            <td>01/04 - 04/05</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Elisabete Gonçalves</td> 
+            <td>NA - NA</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Julia Grazzini</td> 
+            <td>NA - NA</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Liisa Kruusmägi</td> 
+            <td>NA - NA</td>
+            <td>2024</td>
+        </tr>
+        <tr> 
+            <td>Mireia Garcia</td> 
+            <td>NA - NA</td>
+            <td>2024</td>
+        </tr>
+      </table>
+</main>
+
+
 
     <!-- Footer -->
     <footer>
