--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             researchers, practitioners, and activists. This is an ongoing process of building a place for 
             creation, study, connection, and exchange for everyone who wants to expand their own practice. 
             The house is located in the village of Molelos, in Beira Alta, Portugal, next to Serra do Caramulo. 
-            We have been developing projects and receiving <a href="/people.html"><strong>people</strong></a> since 2023. To stay with us, there is no need 
+            We have been developing projects and receiving <a href="/people.html"><strong><u>people</u></strong></a> since 2023. To stay with us, there is no need 
             to apply, nor is there any selection. We practice solidarity prices, as accessible as possible.
         </p>
     </main>
