--- a/located.html
+++ b/located.html
@@ -3,12 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa Estrela | Home</title>
+    <title>Casa Estrela | Location</title>
     <link rel="stylesheet" href="/style.css">
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
-
-
 <body>
     <!-- Top bar with Casa Estrela and navigation links -->
     <div class="top-bar">
@@ -21,20 +19,34 @@
         </nav> 
     </div>
 
-    <!-- Horizontal line below top bar -->
-    <div class="horizontallinetop"></div>
-
-    <!-- Main content -->
-    <main class="main-text">
-        <p>
-            Casa Estrela: is a non-profit organization and self-organized space for artists, theoreticians, 
-            researchers, practitioners, and activists. This is an ongoing process of building a place for 
-            creation, study, connection, and exchange for everyone who wants to expand their own practice. 
-            The house is <a href="/located.html"><strong><u>located</u></strong></a> in the village of Molelos, in Beira Alta, Portugal, next to Serra do Caramulo. 
-            We have been developing projects and receiving <a href="/people.html"><strong><u>people</u></strong></a> since 2023. To stay with us, there is no need 
-            to apply, nor is there any selection. We practice solidarity prices, as accessible as possible.
+    <div class="located">
+         <!-- Left column text -->
+        <div class="text-column">
+          <h1>Molelos</h1>
+          <br>
+          <p class="located-paragraph">Casa Estrela is situated in the village of Molelos (google maps link), nestled in the district of Viseu, within the Beira Alta province in Portugal’s Centro region. Molelos spans 14.83 km² and is home to 2,225 residents, according to the 2021 census.
         </p>
-    </main>
+        <br>
+        <p class="located-paragraph">We are 159km from Porto and 269km from Lisbon if you come by plane to any of those cities.
+        </p>
+        <br>
+        <br>
+        <p class="located-paragraph"><strong>How to get to Casa Estrela</strong></p>
+        <br>
+        <p class="located-paragraph"><strong>By Train</strong></p> 
+        <p class="located-paragraph">You can find the train schedule <a href="https://www.cp.pt/passageiros/pt"><strong>here</strong></a></p>
+        <br>
+        <p class="located-paragraph"><em>*Note that there are no direct trains to Molelos; you’ll get to Santa Comba Dão, which is about 20 minutes by car from the house. Right now, the train station from Santa Comba Dão is not working due to construction work so a bus will get you to the station.</em></p>
+       
+
+
+        </div>
+
+         <!-- Right column images -->
+        <div class="image-column">
+            <img src="image1.png" alt="Image 1">
+          </div>
+      </div>
 
     <!-- Footer -->
     <footer>
@@ -90,7 +102,5 @@
             setInterval(updateClock, 1000);
         });
     </script>
-
-    
 </body>
 </html>
