--- a/located.html
+++ b/located.html
@@ -20,33 +20,29 @@
     </div>
 
     <div class="located">
-         <!-- Left column text -->
-        <div class="text-column">
-          <h1>Molelos</h1>
-          <br>
-          <p class="located-paragraph">Casa Estrela is situated in the village of Molelos (google maps link), nestled in the district of Viseu, within the Beira Alta province in Portugal’s Centro region. Molelos spans 14.83 km² and is home to 2,225 residents, according to the 2021 census.
-        </p>
-        <br>
-        <p class="located-paragraph">We are 159km from Porto and 269km from Lisbon if you come by plane to any of those cities.
-        </p>
-        <br>
-        <br>
-        <p class="located-paragraph"><strong>How to get to Casa Estrela</strong></p>
-        <br>
-        <p class="located-paragraph"><strong>By Train</strong></p> 
-        <p class="located-paragraph">You can find the train schedule <a href="https://www.cp.pt/passageiros/pt"><strong>here</strong></a></p>
-        <br>
-        <p class="located-paragraph"><em>*Note that there are no direct trains to Molelos; you’ll get to Santa Comba Dão, which is about 20 minutes by car from the house. Right now, the train station from Santa Comba Dão is not working due to construction work so a bus will get you to the station.</em></p>
+         <!-- Molelos -->
+         <main class="main-text">
+
+            <!-- LOOKING WEIRD!! I WANT TO HIDE SCROLL, WHEN I ADD MORE TEXT IT CROSSES THE FOOTER -->
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure, facere! Minima labore iure odit consequatur, voluptate beatae mollitia dolorum, sapiente molestias et quae ratione ipsam doloremque quaerat maxime commodi accusamus?
+            </p>
+            <br>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat perferendis, atque adipisci voluptate harum laborum cumque ab repellat quos in ad eius veniam, tenetur incidunt ut amet earum beatae?
+            </p>
+            <br>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat perferendis, atque adipisci voluptate harum laborum cumque ab repellat quos in ad eius veniam, tenetur incidunt ut amet earum beatae?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat perferendis, atque adipisci voluptate harum laborum cumque ab repellat quos in ad eius veniam, tenetur incidunt ut amet earum beatae?
+            </p>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae placeat perferendis, atque adipisci voluptate harum laborum cumque ab repellat quos in ad eius veniam, tenetur incidunt ut amet earum beatae?
+            </p>
+        </main>
        
-
-
-        </div>
-
-         <!-- Right column images -->
-        <div class="image-column">
-            <img src="image1.png" alt="Image 1">
-          </div>
-      </div>
 
     <!-- Footer -->
     <footer>
