--- a/casa-estrela/html/index.html
+++ b/casa-estrela/html/index.html
@@ -28,12 +28,12 @@
 
     <!-- Main content -->
     <main class="main-text">
-        <p>
+        <p class="home-text">
             Casa Estrela: is a non-profit organization and self-organized space for artists, theoreticians, 
             researchers, practitioners, and activists. This is an ongoing process of building a place for 
             creation, study, connection, and exchange for everyone who wants to expand their own practice. 
             The house is <a href="../html/located.html"><strong><u>located</u></strong></a> in the village of Molelos, in Beira Alta, Portugal, next to Serra do Caramulo. 
-            We have been developing projects and receiving <a href="../html/people.html"><strong><u>people</u></strong></a> since 2023. To stay with us, there is no need 
+            We have been developing projects and receiving <a href="../html/people.html"><strong><u>people</u></strong></a> since 2023. To <a href="../html/staywithus.html"><strong><u>stay with us</u></strong></a>, there is no need 
             to apply, nor is there any selection. We practice solidarity prices, as accessible as possible.
         </p>
     </main>
