--- a/casa-estrela/html/located.html
+++ b/casa-estrela/html/located.html
@@ -23,29 +23,22 @@
         </nav> 
     </div>
 
-    <!-- Left Column Text Content -->
-    <main class="main">
-        <section class="section">
-            <h1 class="article-title">Molelos</h1>
-        </section>
+    <div class="content">
+        <div class="row">
+            <p class="staywithus">Molelos</p>
+            <p class="staywithus-text">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quae optio in eligendi ratione tempora sed iure earum sint laboriosam. Molestias, harum. Totam eveniet quis magni nihil similique repudiandae commodi labore.</p>
+        </div>
 
-        <!-- Article Text Section -->
-        <section class="article-text">
-            <p class="article-text-paragraph">This is a paragraph with a class.</p>
-            <br>
-            <p class="article-text-paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nesciunt atque quo labore obcaecati minus possimus dolorem, accusamus, aliquam dolore veniam nobis quos ab omnis, magnam reprehenderit id pariatur delectus quisquam!</p>
-        </section>
 
-        <!-- Vertical Line (Separator) -->
-        <div class="separator"></div>
 
-        <!-- Right Column Image Gallery -->
-        <section class="right-column">
-            <figure class="gallery-image">
-                <img src="https://robidacollective.com/media/pages/about/topolo/b90096335f-1660329258/1_topolo.jpg" alt="">
-            </figure>
-        </section>
-    </main>
+
+
+
+
+
+
+
+    </div>
 
     <!-- Placeholder for Footer -->
     <div id="footer-placeholder"></div>
