--- a/casa-estrela/html/staywithus.html
+++ b/casa-estrela/html/staywithus.html
@@ -34,7 +34,7 @@
                 <li class="staywithus-lists">How do you relate to the ethos of Casa Estrela? </li>
 
             </ul>
-            <p class="staywithus-text">NOTE THAT IN CASA ESTRELA WE ARE NOT CURATORS OF PRODUCERS, SO YOU WILL NEED TO BE INDEPENDENT AND RESPONSIBLE FOR YOUR OWN WORK.</p>
+            <p class="staywithus-text">* <em>Note that in Casa Estrela we are not curators of producers, so you will need to be independent and responsible for your own work.</em></p>
         </div>
 
 
@@ -44,11 +44,12 @@
         <div class="row">
             <p class="staywithus-text"><strong>Prices</strong></p>
             <p class="staywithus-text"><strong>Casa Estrela is a self-organized space sustained by mainly voluntary labor, operating with minimal resources and without subsidies.</strong> The fees were calculated based on the basic needs of the house. Some of these needs take into account common uses such as energy, gas and water expenses, and common consumables such as laundry detergent, toilet paper, trash and coffee, among others. It should be noted that the values contributed by the residents go directly to the project since no one is profiting from the guest's fee. Each resident is responsible for their food. In Casa Estrela we believe that the residency should be as affordable and as accessible as possible; that's why we established three types of rates:</p>
-            <p class="staywithus-text">*Note that we prefer people to stay around one month because we feel it's a reasonable amount of time to make yourself comfortable in the house and the surroundings.</p>
+            <p class="staywithus-text">* <em>Note that we <span class="tooltip">prefer
+                <span class="tooltiptext">But we can talk about it!</span></span> people to stay around one month because we feel it's a reasonable amount of time to make yourself comfortable in the house and the surroundings.</em></p>
         </div>
 
         <div class="row">
-            <p class="staywithus-text"><strong>How does payment work?</strong></p>
+            <p class="staywithus-text"><strong>How does the price work?</strong></p>
             <p class="staywithus-text">Payment is due on the day of arrival. You will be refunded if you leave earlier. If you leave earlier without any proper motive, we won't be able to refund the payment.</p>
             <p class="staywithus-text"><strong>Residents that come with a grant</strong>:</p>
                 <ul>
@@ -60,13 +61,23 @@
                     <li class="staywithus-lists">Price per person per week: </li>
                     <li class="staywithus-lists"> Price per person per month: </li>
                 </ul>
-            <p class="staywithus-text"><strong>Solidarity price:</strong>:</p>
+            <p class="staywithus-text"><strong>Solidarity price:</strong></p>
                 <ul>
                     <li class="staywithus-lists">Price per person per week: </li>
                     <li class="staywithus-lists"> Price per person per month: </li>
                 </ul>
             <p class="staywithus-text"><strong>How does the solidarity price work?</strong></p>
             <p class="staywithus-text">Let us know why you want the solidarity price, and the whole team will study your reasons. It is important to note that we have a specific amount of solidarity prices during the year. So don't hesitate to contact us and explain why you want the solidarity price. The solidarity price is aligned with the Portuguese minimum wage (estimated at €5.33/hour in 2024). We invite all guests to thoughtfully assess their own income in relation to this standard when applying for a <em>Solidarity price</em>.</p>
+        </div>
+
+        <div class="row">
+            <p class="staywithus-text"><strong>How does payment work?</strong></p>
+            <p class="staywithus-text">Payment is required at the beginning of your stay via bank transfer to the account details we will provide.</p>
+        </div>
+
+        <div class="row">
+            <p class="staywithus-text"><strong>Membership</strong></p>
+            <p class="staywithus-text">Since Casa Estrela works as a non-profit organization, it is mandatory to become a member to stay in the house. The membership fee is 12€ for a one-year period; note that the membership does not renew automatically. You’ll become a member by signing this form, and confirming that CASA ESTRELA is not liable for any damage done to you during your stay. </p>
         </div>
 
 
