--- a/casa-estrela/html/people.html
+++ b/casa-estrela/html/people.html
@@ -29,6 +29,7 @@
 <div class="horizontallinetop"></div>
 
 <!-- List of people that stayed at home -->
+ <!-- Maybe make a data base in the future with Python? -->
 <main class="guests">
     <table>
         <tr> 
